--- a/package.json
+++ b/package.json
@@ -52,10 +52,8 @@
 		"@ionic-native/splash-screen": "^3.0.0",
 		"com.darktalker.cordova.screenshot": "https://github.com/gitawego/cordova-screenshot.git",
 		"cordova-plugin-app-version": "^0.1.9",
-		"cordova-plugin-console": "^1.0.7",
 		"cordova-plugin-device": "^1.1.6",
 		"cordova-plugin-shake": "^0.6.0",
-		"cordova-plugin-splashscreen": "^4.0.3",
 		"moment": "^2.0.0"
 	},
 	"dependencies": {
@@ -93,9 +91,8 @@
 		"@ionic-native/splash-screen": "3.12.1",
 		"com.darktalker.cordova.screenshot": "https://github.com/gitawego/cordova-screenshot.git",
 		"cordova-plugin-app-version": "0.1.9",
-		"cordova-plugin-console": "1.0.7",
-		"cordova-plugin-device": "^1.1.6",
-		"cordova-plugin-shake": "git+https://github.com/Ritzlgrmft/cordova-plugin-shake.git",
+		"cordova-plugin-device": "1.1.6",
+		"cordova-plugin-shake": "0.6.0",
 		"cordova-plugin-splashscreen": "4.0.3",
 		"moment": "2.18.1"
 	},
