--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"commit": "git-cz",
 		"compile": "tsc -p tsconfig.json && rollup -c rollup.config.js dist/feedback.module.js > dist/feedback.bundle.js && ngc -p tsconfig.aot.json",
 		"copy-scss": "cp src/*.scss dist",
-		"lint": "tslint --project tsconfig.aot.json --format verbose --type-check",
+		"lint": "tslint --project tsconfig.aot.json --format verbose",
 		"pack": "npm run build && npm pack",
 		"semantic-release": "semantic-release pre && npm publish && semantic-release post",
 		"test": "npm run build && npm run lint"
@@ -32,66 +32,66 @@
 	"module": "dist/index.js",
 	"typings": "dist/index.d.ts",
 	"peerDependencies": {
-		"@angular/common": "^4.0.0",
-		"@angular/compiler": "^4.0.0",
-		"@angular/compiler-cli": "^4.0.0",
-		"@angular/core": "^4.0.0",
-		"@angular/forms": "^4.0.0",
-		"@angular/http": "^4.0.0",
-		"@angular/platform-browser": "^4.0.0",
-		"@angular/platform-browser-dynamic": "^4.0.0",
-		"@angular/platform-server": "^4.0.0",
-		"ionic-angular": "^3.0.0",
-		"rxjs": "^5.1.1",
-		"zone.js": "^0.8.4",
-		"@ionic-native/app-version": "^3.0.0",
-		"@ionic-native/core": "^3.0.0",
-		"@ionic-native/device": "^3.0.0",
-		"@ionic-native/screenshot": "^3.0.0",
-		"@ionic-native/shake": "^3.0.0",
+		"@angular/common": "^5.0.0",
+		"@angular/compiler": "^5.0.0",
+		"@angular/compiler-cli": "^5.0.0",
+		"@angular/core": "^5.0.0",
+		"@angular/forms": "^5.0.0",
+		"@angular/http": "^5.0.0",
+		"@angular/platform-browser": "^5.0.0",
+		"@angular/platform-browser-dynamic": "^5.0.0",
+		"@angular/platform-server": "^5.0.0",
+		"ionic-angular": "^3.9.0",
+		"rxjs": "^5.5.2",
+		"zone.js": "^0.8.18",
+		"@ionic-native/app-version": "^4.0.0",
+		"@ionic-native/core": "^4.0.0",
+		"@ionic-native/device": "^4.0.0",
+		"@ionic-native/screenshot": "^4.0.0",
+		"@ionic-native/shake": "^4.0.0",
 		"com.darktalker.cordova.screenshot": "https://github.com/gitawego/cordova-screenshot.git",
 		"cordova-plugin-app-version": "^0.1.9",
-		"cordova-plugin-device": "^1.1.6",
+		"cordova-plugin-device": "^1.1.7",
 		"cordova-plugin-shake": "^0.6.0",
 		"moment": "^2.0.0"
 	},
 	"dependencies": {
-		"ionic-configuration-service": "^5.0.0",
-		"ionic-logging-service": "^3.0.0"
+		"ionic-configuration-service": "^6.0.0",
+		"ionic-logging-service": "^4.0.0"
 	},
 	"devDependencies": {
-		"@angular/animations": "4.1.2",
-		"@angular/common": "4.1.2",
-		"@angular/compiler": "4.1.2",
-		"@angular/compiler-cli": "4.1.2",
-		"@angular/core": "4.1.2",
-		"@angular/forms": "4.1.2",
-		"@angular/http": "4.1.2",
-		"@angular/platform-browser": "4.1.2",
-		"@angular/platform-browser-dynamic": "4.1.2",
-		"@angular/platform-server": "4.1.2",
-		"ionic-angular": "3.3.0",
-		"rxjs": "5.1.1",
-		"zone.js": "0.8.11",
-		"codelyzer": "3.0.1",
+		"@angular/animations": "5.1.0",
+		"@angular/common": "5.1.0",
+		"@angular/compiler": "5.1.0",
+		"@angular/compiler-cli": "5.1.0",
+		"@angular/core": "5.1.0",
+		"@angular/forms": "5.1.0",
+		"@angular/http": "5.1.0",
+		"@angular/platform-browser": "5.1.0",
+		"@angular/platform-browser-dynamic": "5.1.0",
+		"@angular/platform-server": "5.1.0",
+		"ionic-angular": "3.9.2",
+		"rxjs": "5.5.5",
+		"zone.js": "0.8.18",
+		"codelyzer": "4.0.1",
 		"commitizen": "2.9.6",
-		"cz-conventional-changelog": "2.0.0",
+		"cz-conventional-changelog": "2.1.0",
 		"reflect-metadata": "0.1.10",
-		"requirejs": "2.3.3",
-		"rollup": "0.42.0",
-		"tslint": "5.4.3",
-		"typescript": "2.3.3",
-		"semantic-release": "6.3.6",
-		"@ionic-native/app-version": "3.12.1",
-		"@ionic-native/core": "3.12.1",
-		"@ionic-native/device": "3.12.1",
-		"@ionic-native/screenshot": "3.12.1",
-		"@ionic-native/shake": "3.12.1",
+		"requirejs": "2.3.5",
+		"rollup": "0.52.1",
+		"tslint": "5.8.0",
+		"typescript": "2.4.2",
+		"semantic-release": "8.2.0",
+		"@ionic-native/app-version": "4.5.0",
+		"@ionic-native/core": "4.5.0",
+		"@ionic-native/device": "4.5.0",
+		"@ionic-native/screenshot": "4.5.0",
+		"@ionic-native/shake": "4.5.0",
 		"com.darktalker.cordova.screenshot": "https://github.com/gitawego/cordova-screenshot.git",
 		"cordova-plugin-app-version": "0.1.9",
-		"cordova-plugin-device": "1.1.6",
+		"cordova-plugin-device": "1.1.7",
 		"cordova-plugin-shake": "0.6.0",
-		"moment": "2.18.1"
+		"moment": "2.19.3"
 	},
 	"config": {
 		"commitizen": {
