--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@angular/compiler-cli": "~7.2.0",
 		"@angular/language-service": "~7.2.0",
 		"@compodoc/compodoc": "1.1.9",
+		"@ionic/angular-toolkit": "1.5.1",
 		"@types/node": "~8.9.4",
 		"@types/jasmine": "~2.8.8",
 		"@types/jasminewd2": "~2.0.3",
