--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
 		"@angular/language-service": "~7.2.0",
 		"@compodoc/compodoc": "1.1.9",
 		"@ionic/angular-toolkit": "1.5.1",
-		"@types/node": "~8.9.4",
+		"@types/node": "12.0.10",
 		"@types/jasmine": "~2.8.8",
 		"@types/jasminewd2": "~2.0.3",
-		"codecov": "3.2.0",
-		"codelyzer": "5.0.1",
-		"cpx": "^1.5.0",
+		"codecov": "3.5.0",
+		"codelyzer": "5.1.0",
+		"cpx": "1.5.0",
 		"jasmine-core": "~2.99.1",
 		"jasmine-spec-reporter": "~4.2.1",
 		"karma": "~3.1.1",
@@ -69,12 +69,15 @@
 		"karma-coverage-istanbul-reporter": "~2.0.1",
 		"karma-jasmine": "~1.1.2",
 		"karma-jasmine-html-reporter": "^0.2.2",
+		"karma-junit-reporter": "1.2.0",
 		"ng-packagr": "^4.2.0",
-		"protractor": "~5.4.0",
+		"protractor": "5.4.2",
+		"puppeteer": "1.15.0",
 		"ts-node": "~7.0.0",
 		"tsickle": ">=0.34.0",
 		"tslib": "^1.9.0",
-		"tslint": "~5.11.0",
+		"tslint": "5.18.0",
+		"tslint-angular": "3.0.2",
 		"typescript": "~3.2.2"
 	},
 	"config": {
