--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"build": "ng build ionic-feedback-module && cpx 'projects/ionic-feedback-module/README.md' dist/ionic-feedback-module --verbose",
 		"test": "npm run test-coverage && npm run test-compodoc && npm run lint && npm run test-e2e",
 		"test-coverage": "ng test ionic-feedback-module --code-coverage --watch false --browsers ChromeHeadless",
-		"test-compodoc": "cd projects/ionic-feedback-module && compodoc --coverageTest 100 && cd ../..",
+		"test-compodoc": "cd projects/ionic-feedback-module && compodoc --coverageTest 10 && cd ../..",
 		"test-e2e": "ng e2e",
 		"test-watch": "ng test ionic-feedback-module --code-coverage",
 		"lint": "ng lint",
@@ -63,6 +63,7 @@
 		"codelyzer": "5.1.0",
 		"cpx": "1.5.0",
 		"jasmine-core": "~2.99.1",
+		"jasmine-reporters": "2.3.2",
 		"jasmine-spec-reporter": "~4.2.1",
 		"karma": "~3.1.1",
 		"karma-chrome-launcher": "~2.2.0",
