ci: add variable test

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,5 @@
 trigger:
+
 - master
 
 schedules:
@@ -13,6 +14,10 @@ pool:
   name: Hosted
   
 steps:
+- task: CmdLine@2
+  inputs:
+    script: 'set'
+    
 - task: NodeTool@0
   displayName: 'Use Node 11.x'
   inputs:
