ci: publish app for ios

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -124,3 +124,10 @@ steps:
       mkdir -p $(Build.ArtifactStagingDirectory)/app/ios
       cp -av platforms/ios/build/device/Feedback.ipa $(Build.ArtifactStagingDirectory)/app/ios
       cp -av platforms/ios/build/device/Feedback.app.dSYM/ $(Build.ArtifactStagingDirectory)/app/ios/Feedback.app.dSYM
+
+- task: PublishBuildArtifacts@1
+  displayName: 'publish app for ios'
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/app/ios'
+    ArtifactName: 'app-ios'
+    publishLocation: 'Container'
